# apertomemory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE  MANIFEST.in  README.it.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
draft/: README.md  draft-ferro-apertomemory-00.txt  draft-ferro-apertomemory-00.xml  draft-ferro-apertomemory-01.txt  draft-ferro-apertomemory-01.xml  draft-ferro-apertomemory-02.txt  draft-ferro-apertomemory-02.xml
spec/: amem-schema.cddl
src/amem/: __init__.py  cli.py  keys.py  mcp_server.py  objects.py  vault.py
test-vectors/: README.md  amem-testvector-001.json  amem-testvector-002.json  gen_testvectors.py  gen_testvectors_keys.py
test-vectors/v2/: README.md  apertomemory-v2-test-vectors.json  generate.py
tests/: test_mcp_e2e.py  test_roundtrip.py  test_security.py  test_security_review.py  test_security_review_v2.py  test_security_review_v3.py  test_security_review_v4.py  test_security_review_v5.py  test_version.py
