[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apertomemory"
version = "0.2.1"
description = "ApertoMemory — portable, client-side-encrypted, user-owned AI memory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Andrea Ferro"}]
urls = {Homepage = "https://apertomemory.org", "PyPI" = "https://pypi.org/project/apertomemory/"}
dependencies = ["cbor2>=5.5", "pycose>=1.0", "argon2-cffi>=23", "cryptography>=42"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
amem = "amem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
